Enhance SetupBench with PostgreSQL setup task and logging improvements
- Added a new smoke test task for PostgreSQL setup, including schema and seed SQL files.
- Implemented a simplified smoke test script to validate PostgreSQL installation and configuration.
- Updated Dockerfile.agent to include Node.js installation alongside Python dependencies.
- Enhanced logging structure to separate logs from workspace, improving clarity and organization.
- Modified run_agent_in_container.py to adjust logging paths and metrics file location.
- Updated README.md to reflect new execution modes and detailed instructions for PostgreSQL setup.

--- a/.gitignore
+++ b/.gitignore
@@ -64,6 +64,7 @@ pyrightconfig.json
 
 # SetupBench Output
 setupbench_output/
+setupbench_output_docker/
 test*.json
 *.log
 
@@ -84,6 +85,3 @@ test*.json
 Network Trash Folder
 Temporary Items
 .apdisk
-
-# Old implementation (legacy)
-run_setupbench.py
