Update Dockerfile and documentation for Ubuntu 22.04 support
- Upgraded pip in Dockerfile.agent to ensure compatibility with Ruby 2.7.
- Enhanced README.md to highlight Ubuntu 22.04 support, covering 77 out of 93 tasks (82.8% of SetupBench).
- Updated run_smoke_test_simple.py to reflect task coverage and execution details.
- Removed obsolete architecture and implementation summary documents to streamline project structure.
- Added new documentation for setupbench compliance and verification reports.

--- a/Dockerfile.agent
+++ b/Dockerfile.agent
@@ -17,6 +17,8 @@ RUN if command -v apt-get >/dev/null 2>&1; then \
             ca-certificates \
             curl \
             gnupg && \
+        # Upgrade pip to latest version (fixes ruby:2.7 compatibility)
+        python3 -m pip install --upgrade pip && \
         # Install Node.js 20.x from NodeSource \
         curl -fsSL https://deb.nodesource.com/setup_20.x | bash - && \
         apt-get install -y nodejs && \
